# local-brain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  INVESTIGATION-REPORT-UPDATED.md  INVESTIGATION-REPORT.md  MIGRATION.md  MODELS.md  MODEL_COMPARISON_ANALYSIS.md  MODEL_GUIDE.md  MODEL_VALIDATION_RESULTS.md  PRIORITIZATION_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_MODEL_REFERENCE.md  README.md  RELEASE.md  RESEARCH-composer-1.md  RESEARCH-gemini-3-pro.md  RESEARCH-gpt-5.1-codex-max.md  TROUBLESHOOTING.md  VALIDATION_EXPERIMENTS.md  main.py  model_comparison_test.sh  models.json  poc_agent_sdk.py  pyproject.toml  validate_models.sh
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/scripts/: install.sh
.claude-plugin/skills/local-brain/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: BLOG_POST_LEARNINGS.md  BLOG_POST_PART2_LOCAL_SETUP.md  DECISION.md  DEPRECATION_PLAN.md  INSTALLATION.md  LITELLM_VALIDATION_PLAN.md  MIGRATION_AGENT_SDK.md  QUICK_START.md  RESEARCH-claude-4.5-opus-high.md  RESEARCH_WEB_TOOLS.md  STRATEGIC_PIVOT.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  delegation-research.md  model-evaluation-checklist.md  model-performance-comparison.md
docs/adr/: 0001-use-toolcallingagent-over-codeagent.md
docs/adrs/: 002-smolagents.md  006-otel-jaeger-tracing.md  README.md
docs/research/: 001-future-roadmap.md  005-litellm-ollama-routing-subagents.md  006-project-reframing.md  007-rust-rewrite-plan.md  README.md  model-performance-comparison.md
internal/: DOCUMENTATION_PLAN.md  PRIORITIZATION_ANALYSIS.md  PYTHON_MIGRATION_INVESTIGATION.md  README.md  VALIDATION.md  VALIDATION_RESULTS.md
internal/adr/: 001-model-hallucination-handling.md  002-plugin-distribution-architecture.md  003-model-selection-priority-system.md
local-brain/: local-brain.skill  plugin.json
local-brain/.claude-plugin/: plugin.json
local-brain/skills/local-brain/: SKILL.md
local-brain/skills/local-brain/references/: CLI_REFERENCE.md  HOOKS.md
local_brain/: __init__.py  agent.py  cli.py  models.py  security.py  skill_loader.py  smolagent.py  tracing.py
local_brain/skills/: .gitkeep
local_brain/tools/: __init__.py  file_tools.py  git_tools.py  shell_tools.py
scripts/: sync_version.py  test-model-auto.sh  test-model.sh
spikes/: README.md  SPIKE_RESULTS.md  requirements.txt  spike_01_smolagents_basic.py  spike_02_code_as_tool.py  spike_03_sandbox_security.py  spike_04_qwen_coder_quality.py  spike_05_otel_tracing.py  spike_06_grep_ast.py  spike_07_tree_sitter.py  spike_08_pyodide_sandbox.py  spike_09_prompt_templates.py  spike_10_toolcalling_agent.py  spike_1_tool_calling.py  spike_2_skill_loading.py  spike_3_multi_turn.py  spike_4_performance.py  spike_5_distribution.md
src/: main.rs
tech/: ARCHITECTURE.md  RELEASE.md  SETUP.md  TESTING.md
tests/: __init__.py  integration.rs  integration_test.sh  test_agent.py  test_cli.py  test_security.py  test_smolagent.py  test_tools.py
tests/fixtures/: code_smells.js
