[package]
name = "local-brain"
version = "0.1.0"
edition = "2021"
authors = ["Ismael Martinez <ismaelmartinez@gmail.com>"]
description = "A tool for structured code review using local Ollama LLM models"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
